<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/register_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_lastname"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/register_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_ok"
        android:onClick="register" />

    <TextView
        android:id="@+id/register_waiting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>