<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/main_tableLayout">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <EditText
            android:id="@+id/main_entity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text" />
        
        <Button
	        android:id="@+id/main_postButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/main_postButton"
	        android:onClick="post"/>
        
        <Button
	        android:id="@+id/main_getButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/main_getButton"
	        android:onClick="get"/>

        <TextView
            android:id="@+id/main_waiting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </TableRow>
    
    <Button
        android:id="@+id/suscripcionCanales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_suscribir_canales_push"
        android:onClick="suscribirCanalesPush" />
    
    <Button
        android:id="@+id/enviarPush"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_enviar_mensaje_push"
        android:onClick="enviarMensajePush" />

</TableLayout>